chore: arbitrage page
